fix(otto/type): align population to bottom

--- a/src/components/Otto/OttoTypeSection/style.scss
+++ b/src/components/Otto/OttoTypeSection/style.scss
@@ -9,6 +9,9 @@
 
 .otto-card {
     &__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         padding: 40px;
     }
     &__image {
